changed header text color

--- a/_includes/site-feature.html
+++ b/_includes/site-feature.html
@@ -7,7 +7,7 @@
 {% endif %}
 
 {% if feature_text or feature_image %}
-  <div class="feature"{% if feature_image %} style="background-image: url({{ feature_image }})"{% endif %}>
+  <div class="feature"{% if feature_image %} style="background-image: url({{ feature_image }}), color: white"{% endif %}>
     <div class="container  typeset">
       {{ feature_text | markdownify }}
     </div>
