--- a/_includes/site-feature.html
+++ b/_includes/site-feature.html
@@ -9,7 +9,7 @@
 {% if feature_text or feature_image %}
   <div class="feature"{% if feature_image %} style="background-image: url({{ feature_image }})"{% endif %}>
     <div class="container  typeset">
-      <span style="background-color: white">{{ feature_text | markdownify }} </span>
+      <span style="background-color: white; opacity: 0.5;">{{ feature_text | markdownify }} </span>
     </div>
   </div>
 {% endif %}
