--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -4,110 +4,57 @@
   overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-n9g5{background-color:#ffffff;border-color:inherit;color:#000000;text-align:left;vertical-align:top}
-.tg .tg-24c6{background-color:#009901;border-color:inherit;color:#000000;text-align:left;vertical-align:top}
-.tg .tg-p0ci{background-color:#68cbd0;border-color:inherit;color:#000000;text-align:left;vertical-align:top}
-.tg .tg-damd{background-color:#fd6864;border-color:inherit;color:#000000;text-align:center;vertical-align:top}
-.tg .tg-xbi9{background-color:#9b9b9b;border-color:inherit;color:#000000;font-style:italic;text-align:left;vertical-align:top}
-.tg .tg-tq1m{background-color:#ffffc7;border-color:inherit;color:#000000;font-style:italic;text-align:left;vertical-align:top}
-.tg .tg-uszq{background-color:#ffffff;border-color:inherit;color:#000000;font-weight:bold;text-align:left;vertical-align:top}
-.tg .tg-9nq4{background-color:#ffccc9;border-color:inherit;color:#000000;font-weight:bold;text-align:left;vertical-align:top}
-.tg .tg-i52f{background-color:#f8a102;border-color:inherit;color:#000000;text-align:left;vertical-align:top}
-.tg .tg-efy6{background-color:#dae8fc;border-color:inherit;color:#000000;text-align:left;vertical-align:top}
+.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-damd"><span style="font-weight:bold">Time</span><br><span style="font-weight:bold">CT</span></th>
-    <th class="tg-damd"><span style="font-weight:bold">Monday</span><br><span style="font-weight:bold">(6/6)</span></th>
-    <th class="tg-damd"><span style="font-weight:bold">Tuesday</span><br><span style="font-weight:bold">(6/7)</span></th>
-    <th class="tg-damd"><span style="font-weight:bold">Wednesday</span><br><span style="font-weight:bold">(6/8)</span></th>
-    <th class="tg-damd"><span style="font-weight:bold">Thursday</span><br><span style="font-weight:bold">(6/9)</span></th>
-    <th class="tg-damd"><span style="font-weight:bold">Friday</span><br><span style="font-weight:bold">(6/10)</span></th>
+    <th class="tg-c3ow" colspan="6">**Workshop Schedule**</th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td class="tg-9nq4">8:00 AM</td>
-    <td class="tg-n9g5">Pick up ID, FAC. <br>Travel to TACC<br>* Meet @ Lobby, <br>Breakfast Sponsored by TACC</td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"><span style="font-weight:400;font-style:normal;text-decoration:none">Travel to TACC</span><br><span style="font-weight:400;font-style:normal;text-decoration:none">*</span>Meet @ ACB Lobby, <br><span style="font-weight:400;font-style:normal">Breakfast Sponsored by TACC</span></td>
+    <td class="tg-c3ow">**Central <br>Timezone**</td>
+    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Monday (8/15)<br>[Pathways to Integration]<br><span style="font-weight:bold">**</span></td>
+    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Tuesday (8/16)<br>[Platforms for Community / <br>Data Management Tools]<br><span style="font-weight:bold">**</span></td>
+    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Wednesday (8/17)<br>[Models &amp; Use Cases]<br><span style="font-weight:bold">**</span></td>
+    <td class="tg-c3ow"><span style="font-weight:bold">**Thursday</span><br><span style="font-weight:bold">(8/18)**</span></td>
+    <td class="tg-c3ow"><span style="font-weight:bold">**Friday</span><br><span style="font-weight:bold">(8/19)**</span></td>
   </tr>
   <tr>
-    <td class="tg-9nq4">9:00 AM</td>
-    <td class="tg-n9g5"><span style="font-weight:bold">Welcome and Ice-breaker</span></td>
-    <td class="tg-p0ci"><span style="font-weight:bold">Introduction to Linux</span></td>
-    <td class="tg-p0ci" rowspan="2"><span style="font-weight:bold;font-style:normal">Object Oriented Python</span></td>
-    <td class="tg-p0ci" rowspan="3"><span style="font-weight:bold;font-style:normal">Python</span><br><span style="font-weight:bold;font-style:normal">Pandas/Matplotlib</span></td>
-    <td class="tg-i52f"><span style="font-weight:bold;font-style:normal">Hack@TACC Challenge</span><br><span style="font-weight:bold;font-style:normal">Group Work, TACC Prepare for presentations,</span></td>
+    <td class="tg-c3ow" rowspan="2">**Morning <br>Sessions**<br><br>10a-12p</td>
+    <td class="tg-0pky">[10a-11a]<br>* Welcome (Presentation)</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* </span>Best Practices for Evaluating CI and Modeling Environments (Presentation)<br>* Integrating Evaluation and Assessment from the Beginning (Presentation)</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* Texas DamagePlain </span>(Presentation)<br><span style="font-weight:400;font-style:normal">* Lightning Talks (Presentation)</span></td>
+    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">*  </span>Worktime (Hackathon)<br></td>
+    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)<br></td>
   </tr>
   <tr>
-    <td class="tg-9nq4">10:00 AM</td>
-    <td class="tg-n9g5"><span style="font-weight:bold">Program Overview</span><br>Rosalia Gomez</td>
-    <td class="tg-p0ci" rowspan="2"><span style="font-weight:bold;font-style:normal">Intro to Python</span></td>
-    <td class="tg-i52f" rowspan="2"><span style="font-weight:bold;font-style:normal">Hack@TACC Challenge</span><br><span style="font-weight:bold;font-style:normal">Presentations, TACC (Github Repo with Code and Presentation)</span></td>
+    <td class="tg-0pky">[11a-12p]<br>* Model-Based Reasoning (Presentation)<br>* Team Creation (Hackathon)</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reminder - Model-Based Reasoning (Presentation)<br>* Project Goal Creation (Hackathon)</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Github for Project Hubs Tutorial</td>
   </tr>
   <tr>
-    <td class="tg-9nq4">11:00 AM</td>
-    <td class="tg-n9g5"><span style="font-weight:bold">Introduction to Research Methodology</span><br>Anne Bowen</td>
-    <td class="tg-i52f"><span style="font-weight:bold;font-style:normal">Hack@TACC Challenge </span><br><span style="font-weight:bold;font-style:normal">Group Topic</span></td>
+    <td class="tg-c3ow">**Break**<br><br>12p-1p</td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky"></td>
+    <td class="tg-0pky"></td>
   </tr>
   <tr>
-    <td class="tg-9nq4">12:00 PM</td>
-    <td class="tg-tq1m">Lunch Sponsored by TACC</td>
-    <td class="tg-tq1m">Break</td>
-    <td class="tg-tq1m" rowspan="2">Break</td>
-    <td class="tg-tq1m" rowspan="2">Break</td>
-    <td class="tg-tq1m">Lunch Sponsored by TACC</td>
+    <td class="tg-c3ow" rowspan="2">**Afternoon<br>Sessions**<br><br>1p-3p</td>
+    <td class="tg-0pky" rowspan="2">[1p-3p]<br><span style="font-weight:400;font-style:normal">* Interdisciplinary Tutorial</span><br>  - Concept Maps  <br>  - Domain Vocabulary<br>  - How to Explain Research</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Ontosoft and Sharing Resources Tutorial</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Team Intros / Project Goals (Hackathon)</td>
+    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[1p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)<br></td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Final Presentations (Hackathon)</td>
   </tr>
   <tr>
-    <td class="tg-9nq4">1:00 PM</td>
-    <td class="tg-n9g5">TACC Data Center Tour</td>
-    <td class="tg-p0ci" rowspan="2"><span style="font-weight:bold">Python DeepDive</span></td>
-    <td class="tg-uszq"><span style="font-weight:bold;font-style:normal">Research Development Plans with Mentor</span></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">2:00 PM</td>
-    <td class="tg-p0ci" rowspan="2"><span style="font-weight:bold;font-style:normal">TACC Overview and Onboarding</span></td>
-    <td class="tg-efy6"><span style="font-weight:bold;font-style:normal">SRS Workshop: Grad School 101 </span><br><span style="font-weight:bold;font-style:normal;text-decoration:none">FAC </span><span style="font-weight:bold">21</span></td>
-    <td class="tg-i52f" rowspan="3"><span style="font-weight:bold;font-style:normal">Hack@TACC Challenge</span><br><span style="font-weight:bold;font-style:normal">Group Work</span></td>
-    <td class="tg-n9g5"></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">3:00 PM</td>
-    <td class="tg-i52f" rowspan="2"><span style="font-weight:bold;font-style:normal">Hack@TACC Challenge </span><br><span style="font-weight:bold;font-style:normal">Group Introductions</span></td>
-    <td class="tg-tq1m"><span style="font-weight:400;font-style:normal">Break</span></td>
-    <td class="tg-n9g5"></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">4:00 PM</td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">5:00 PM</td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-xbi9" colspan="3"><span style="font-weight:400;font-style:normal">June 7-9: Participate </span>virtually or in-person, FAC 101B</td>
-    <td class="tg-n9g5"></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">6:00 PM</td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"><span style="font-weight:400;font-style:italic;text-decoration:none">Student Journaling</span></td>
-  </tr>
-  <tr>
-    <td class="tg-9nq4">7:00 PM</td>
-    <td class="tg-n9g5"><span style="font-style:italic">REU Pre-Survey</span></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-n9g5"></td>
-    <td class="tg-24c6"><span style="font-weight:bold;font-style:normal">Pay Day</span></td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* Polar-science Physics- Guided Learning</span><br></td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
+    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reflecting on Model-Based Reasoning<br>* Closing</td>
   </tr>
 </tbody>
 </table>
