updated schedule style

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -4,57 +4,63 @@
   overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-lvop{background-color:#34cdf9;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-7od5{background-color:#9aff99;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-78a2{background-color:#656565;border-color:inherit;color:#ffffff;font-size:16px;text-align:center;vertical-align:top}
+.tg .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-feq9{background-color:#9698ed;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-ycyt{background-color:#67fd9a;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-cnwr{background-color:#ffcc67;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-i9i9{background-color:#fe996b;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-61xu{background-color:#cbcefb;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-x6qq{background-color:#dae8fc;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-elvq{background-color:#fffc9e;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-pidv{background-color:#ffce93;border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-hcom{background-color:#efefef;border-color:inherit;font-size:24px;font-weight:bold;text-align:center;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-c3ow" colspan="6">**Workshop Schedule**</th>
+    <th class="tg-78a2" colspan="6"><span style="font-weight:bold">Workshop Schedule</span></th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td class="tg-c3ow">**Central <br>Timezone**</td>
-    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Monday (8/15)<br>[Pathways to Integration]<br><span style="font-weight:bold">**</span></td>
-    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Tuesday (8/16)<br>[Platforms for Community / <br>Data Management Tools]<br><span style="font-weight:bold">**</span></td>
-    <td class="tg-c3ow"><span style="font-weight:bold">**</span>Wednesday (8/17)<br>[Models &amp; Use Cases]<br><span style="font-weight:bold">**</span></td>
-    <td class="tg-c3ow"><span style="font-weight:bold">**Thursday</span><br><span style="font-weight:bold">(8/18)**</span></td>
-    <td class="tg-c3ow"><span style="font-weight:bold">**Friday</span><br><span style="font-weight:bold">(8/19)**</span></td>
+    <td class="tg-7btt">Central <br>Timezone<br>CST</td>
+    <td class="tg-feq9">Monday (8/15)<br>[Pathways to Integration]<br></td>
+    <td class="tg-ycyt">Tuesday (8/16)<br>[Platforms for Community / <br>Data Management Tools]<br></td>
+    <td class="tg-lvop">Wednesday (8/17)<br>[Models &amp; Use Cases]<br></td>
+    <td class="tg-cnwr"><span style="font-weight:bold">Thursday</span><br><span style="font-weight:bold">(8/18)</span></td>
+    <td class="tg-i9i9"><span style="font-weight:bold">Friday</span><br><span style="font-weight:bold">(8/19)</span></td>
   </tr>
   <tr>
-    <td class="tg-c3ow" rowspan="2">**Morning <br>Sessions**<br><br>10a-12p</td>
-    <td class="tg-0pky">[10a-11a]<br>* Welcome (Presentation)</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* </span>Best Practices for Evaluating CI and Modeling Environments (Presentation)<br>* Integrating Evaluation and Assessment from the Beginning (Presentation)</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* Texas DamagePlain </span>(Presentation)<br><span style="font-weight:400;font-style:normal">* Lightning Talks (Presentation)</span></td>
-    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">*  </span>Worktime (Hackathon)<br></td>
-    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)<br></td>
+    <td class="tg-7btt" rowspan="2">Morning <br>Sessions<br><br>10a-12p</td>
+    <td class="tg-61xu"><span style="font-weight:bold">[10a-11a]</span><br>* Welcome (Presentation)</td>
+    <td class="tg-7od5"><span style="font-weight:bold;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* </span>Best Practices for Evaluating CI and Modeling Environments (Presentation)<br>* Integrating Evaluation and Assessment from the Beginning (Presentation)</td>
+    <td class="tg-x6qq"><span style="font-weight:bold;font-style:normal">[10a-11a]</span><br><span style="font-weight:400;font-style:normal">* Texas DamagePlain </span>(Presentation)<br><span style="font-weight:400;font-style:normal">* EPIC Panel</span></td>
+    <td class="tg-elvq" rowspan="2"><span style="font-weight:bold;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">*  </span>Worktime (Hackathon)</td>
+    <td class="tg-pidv" rowspan="2"><span style="font-weight:bold;font-style:normal">[10a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
   </tr>
   <tr>
-    <td class="tg-0pky">[11a-12p]<br>* Model-Based Reasoning (Presentation)<br>* Team Creation (Hackathon)</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reminder - Model-Based Reasoning (Presentation)<br>* Project Goal Creation (Hackathon)</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Github for Project Hubs Tutorial</td>
+    <td class="tg-61xu"><span style="font-weight:bold">[11a-12p]</span><br>* Model-Based Reasoning (Presentation)<br>* Team Creation (Hackathon)</td>
+    <td class="tg-7od5"><span style="font-weight:bold;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reminder - Model-Based Reasoning (Presentation)<br>* Project Goal Creation (Hackathon)</td>
+    <td class="tg-x6qq"><span style="font-weight:bold;font-style:normal">[11a-12p]</span><br><span style="font-weight:400;font-style:normal">* </span>Github for Project Hubs Tutorial</td>
   </tr>
   <tr>
-    <td class="tg-c3ow">**Break**<br><br>12p-1p</td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
-    <td class="tg-0pky"></td>
+    <td class="tg-hcom" colspan="6">Break [12p-1p]</td>
   </tr>
   <tr>
-    <td class="tg-c3ow" rowspan="2">**Afternoon<br>Sessions**<br><br>1p-3p</td>
-    <td class="tg-0pky" rowspan="2">[1p-3p]<br><span style="font-weight:400;font-style:normal">* Interdisciplinary Tutorial</span><br>  - Concept Maps  <br>  - Domain Vocabulary<br>  - How to Explain Research</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Ontosoft and Sharing Resources Tutorial</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Team Intros / Project Goals (Hackathon)</td>
-    <td class="tg-0pky" rowspan="2"><span style="font-weight:400;font-style:normal">[1p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)<br></td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Final Presentations (Hackathon)</td>
+    <td class="tg-7btt" rowspan="2">Afternoon<br>Sessions<br><br>1p-3p</td>
+    <td class="tg-61xu" rowspan="2"><span style="font-weight:bold">[1p-3p]</span><br><span style="font-weight:400;font-style:normal">* Interdisciplinary Tutorial</span><br>  - Concept Maps  <br>  - Domain Vocabulary<br>  - How to Explain Research</td>
+    <td class="tg-7od5"><span style="font-weight:bold;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Ontosoft and Sharing Resources Tutorial</td>
+    <td class="tg-x6qq"><span style="font-weight:bold;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Team Intros / Project Goals (Hackathon)</td>
+    <td class="tg-elvq" rowspan="2"><span style="font-weight:bold;font-style:normal">[1p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
+    <td class="tg-pidv"><span style="font-weight:bold;font-style:normal">[1p-2p]</span><br><span style="font-weight:400;font-style:normal">* </span>Final Presentations (Hackathon)</td>
   </tr>
   <tr>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* Polar-science Physics- Guided Learning</span><br></td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
-    <td class="tg-0pky"><span style="font-weight:400;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reflecting on Model-Based Reasoning<br>* Closing</td>
+    <td class="tg-7od5"><span style="font-weight:bold;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* Polar-science Physics- Guided Learning</span><br></td>
+    <td class="tg-x6qq"><span style="font-weight:bold;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
+    <td class="tg-pidv"><span style="font-weight:bold;font-style:normal">[2p-3p]</span><br><span style="font-weight:400;font-style:normal">* </span>Reflecting on Model-Based Reasoning* Closing</td>
   </tr>
 </tbody>
 </table>
