--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -39,7 +39,7 @@
   <tr>
     <td class="tg-vmxo"><span style="font-weight:bold;font-style:normal">Thursday</span><br><span style="font-weight:bold">(8/18)</span><br><br><span style="font-weight:700;font-style:normal">[Hackathon]</span></td>
     <td class="tg-uf2l"><span style="font-weight:400;font-style:normal">•</span> Worktime (Hackathon)</td>
-    <td class="tg-r618"><span style="font-weight:400;font-style:normal">* </span>Worktime (Hackathon)</td>
+    <td class="tg-r618"><span style="font-weight:400;font-style:normal">•</span> Worktime (Hackathon)</td>
   </tr>
   <tr>
     <td class="tg-vmxo"><span style="font-weight:bold;font-style:normal">Friday</span><br><span style="font-weight:bold">(8/19)</span><br><br><span style="font-weight:700;font-style:normal">[Hackathon]</span></td>
