--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -7,9 +7,9 @@
 
   {% elsif page.layout == "page" or page.layout == "home" or page.layout == "blog" %}
     <section class="section  section--description">
-      <h3>About this site</h3>
-      <p>{{ site.description }}</p>
-      {% include nav-social.html %}
+      <img src="https://github.com/IS-GEO/ISGEO-22/blob/gh-pages/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
+      &nbsp
+      <img src="https://github.com/IS-GEO/ISGEO-22/blob/gh-pages/assets/iharp-logo%20200px.jpeg" alt="IS-GEO Logo">
     </section>
 
   {% elsif page.layout == "categories" %}
