added tacc and nsf

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -10,6 +10,10 @@
       <img src="/ISGEO-22/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
       &nbsp
       <img src="/ISGEO-22/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo">
+      &nbsp
+      <img src="/ISGEO-22/assets/TACC-200px.png" alt="TACC Logo">
+      &nbsp
+      <img src="/ISGEO-22/assets/NSF-200px.png" alt="NSF Logo">
     </section>
 
   {% elsif page.layout == "categories" %}
