removed images from section and put in div

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -7,6 +7,9 @@
 
   {% elsif page.layout == "page" or page.layout == "home" or page.layout == "blog" %}
     <section class="section  section--description">
+      
+    </section>
+    <div>
       <img src="/ISGEO-22/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
       &nbsp
       <img src="/ISGEO-22/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo">
@@ -14,7 +17,7 @@
       <img src="/ISGEO-22/assets/TACC-200px.png" alt="TACC Logo">
       &nbsp
       <img src="/ISGEO-22/assets/NSF-200px.png" alt="NSF Logo">
-    </section>
+    </div>
 
   {% elsif page.layout == "categories" %}
     <section class="section  section--category-index">
