added {{ site.baseurl}}

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -10,13 +10,13 @@
       
     </section>
     <div style="opacity: 1;">
-      <img src="{{ site.url }}/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
+      <img src="{{ site.url }}{{ site.baseurl}}/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
       &nbsp
-      <img src="{{ site.url }}/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo">
+      <img src="{{ site.url }}{{ site.baseurl}}/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo">
       &nbsp
-      <img src="{{ site.url }}/assets/TACC-200px.png" alt="TACC Logo">
+      <img src="{{ site.url }}{{ site.baseurl}}/assets/TACC-200px.png" alt="TACC Logo">
       &nbsp
-      <img src="{{ site.url }}/assets/NSF-200px.png" alt="NSF Logo">
+      <img src="{{ site.url }}{{ site.baseurl}}/assets/NSF-200px.png" alt="NSF Logo">
     </div>
 
   {% elsif page.layout == "categories" %}
