--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -7,7 +7,7 @@ $accentColour: #05bf85 !default;
 // Text colours
 $headingColour: #242e2b !default;
 $bodyColour: #384743 !default;
-$linkColour: #05bf85 !default;
+$linkColour: #024933 !default;
 $hoverColour: #008000 !default;
 $focusColour: #fa407a !default;
 $captionColour: #a8adac !default;
