added padding to images

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -476,6 +476,8 @@ pre code {
   height: 150px;
   border-radius: 50%;
   margin-bottom: 10px;
+  padding-right: 20px;
+
   
   float: left;
   object-fit: cover;
