--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -33,6 +33,9 @@
               {% if ins.speakertwitter %}
               <a href="{{ ins.speakertwitter }}">[Twitter]</a>
               {% endif %}
+              {% if ins.speakergithub %}
+              <a href="{{ ins.speakergithub }}">[Github]</a>
+              {% endif %}
               {% if ins.speakerurl %}
               <a href="{{ ins.speakerurl }}">[Website]</a>
               {% endif %}
