--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -10,13 +10,13 @@
       
     </section>
     <div style="opacity: 1;">
-      <img src="{{ site.url }}{{ site.baseurl}}/assets/IS-GEO-200px.png" alt="IS-GEO Logo">
+      <a href="https://is-geo.org/" target="_blank"> <img src="{{ site.url }}{{ site.baseurl}}/assets/IS-GEO-200px.png" alt="IS-GEO Logo"> </a>
       &nbsp
-      <img src="{{ site.url }}{{ site.baseurl}}/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo">
+      <a href="https://iharp.umbc.edu/" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo"></a>
       &nbsp
-      <img src="{{ site.url }}{{ site.baseurl}}/assets/TACC-200px.png" alt="TACC Logo">
+      <a href="https://www.tacc.utexas.edu/" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/TACC-200px.png" alt="TACC Logo"></a>
       &nbsp
-      <img src="{{ site.url }}{{ site.baseurl}}/assets/NSF-200px.png" alt="NSF Logo">
+      <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1632211" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/NSF-200px.png" alt="NSF Logo"></a>
     </div>
 
   {% elsif page.layout == "categories" %}
