fixed missing quote

--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -7,7 +7,7 @@
     <ul>
       {% for res in site.data.sessions.resources %}
       <li>
-      <a href="{{ res.url }} target="_blank">{{ res.name }}</a> 
+      <a href="{{ res.url }}" target="_blank">{{ res.name }}</a> 
       <br>
       {% if res.description %}
       {{ res.description }}
