adjusted focus color

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -9,7 +9,7 @@ $headingColour: #242e2b !default;
 $bodyColour: #384743 !default;
 $linkColour: #024933 !default;
 $hoverColour: #008000 !default;
-$focusColour: #fa407a !default;
+$focusColour: lightgrey !default;
 $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
