--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -39,10 +39,10 @@
          <br>
          {% endif %}
          {% if event.sessionhost %}
-         &ensp; Session Host: <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ event.sessionhost }}">{{ event.sessionhost }}</a>
+         &ensp; <u>Session Host:</u> <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ event.sessionhost }}">{{ event.sessionhost }}</a>
          {% endif %}
          {% if event.sessionguests %}
-         &ensp; Guests: 
+         &ensp; <u>Guests:</u> 
          {% for guest in event.sessionguests %}
           <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ guest }}">{{ guest }}, </a>
           {% endfor %}
@@ -64,10 +64,10 @@
          &ensp; Description: {{ event.sessiondescription }}
          {% endif %}
          {% if event.sessionhost %}
-         &ensp; Session Host: <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ event.sessionhost }}">{{ event.sessionhost }}</a>
+         &ensp; <u>Session Host:</u> <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ event.sessionhost }}">{{ event.sessionhost }}</a>
          {% endif %}
          {% if event.sessionguests %}
-         &ensp; Guests: 
+         &ensp; <u>Guests:</u> 
          {% for guest in event.sessionguests %}
           <a href="{{ site.url}}{{site.baseurl}}/speakers/#{{ guest }}">{{ guest }}, </a>
           {% endfor %}
