--- a/_includes/shared-miro.html
+++ b/_includes/shared-miro.html
@@ -1,4 +1,4 @@
-<h2>[ISGEO-22] Shared Miro Board for Participant Personal and Project Pitch Slides</h2>
+<h2>Participant Personal and Project Pitch Slides</h2>
 <br>
 <a href="https://miro.com/app/board/uXjVPf6B12w=/?share_link_id=207634384290" target="_blank"><em>[Click Here to Open in your app/browser]</em></a>
 
