fixed session name

--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -27,7 +27,7 @@
        <h5 style="color:#f68a23;">Theme: {{ day.theme }} </h5>
        <br>
 
-        <a href="{{ day.morningsessionics }}"><img src="{{ site.url }}{{ site.baseurl}}/assets/addtocal.png" width="20px" > <strong style="background: lightgrey;">Morning Session [10am -  CT]</strong></a>
+        <a href="{{ day.morningsessionics }}"><img src="{{ site.url }}{{ site.baseurl}}/assets/addtocal.png" width="20px" > <strong style="background: lightgrey;">Morning Session [10am - 12pmCT]</strong></a>
           
 
        
