--- a/_includes/speakers-sched.html
+++ b/_includes/speakers-sched.html
@@ -6,7 +6,7 @@
        <tr>
         <td style="vertical-align: top;"> <h5>{{ speaker.speakername }}</h5></td>
         
-        <td style="vertical-align: top;"> <h5>{{ speaker.speakeremail }}</h5></td>
+        <td style="vertical-align: top; text-align: center;"> {{ speaker.speakeremail }}</td>
        
         <td style="vertical-align: top;"> 
           {% for event in site.data.sessions.sessioninfo %}
